fix(zones): switched the alignment to only the stated columns
https://github.com/canonical/maas-ui/pull/5588#issuecomment-2606862586

--- a/src/app/zones/views/ZonesList/ZonesListTable/_index.scss
+++ b/src/app/zones/views/ZonesList/ZonesListTable/_index.scss
@@ -1,5 +1,7 @@
 .generic-table {
-  th, td:is(.machines, .devices, .controllers) {
-    text-align: right;
+  th, td {
+    &:is(.machines, .devices, .controllers) {
+      text-align: right;
+    }
   }
 }
